unified quantized model inferences and refactor files
- Modified `Quantizer` in `export.ipynb` to use certain configuration since default config for x86 and arm was different (per channel and per tensor). However, pytorch inferences for quantized models in x86 and arm result in slightly different results because pytorch (or backend it uses) quantizes biases on arm but use floating point biases on x86. For this reason, tolerance for static quantization inference test is set large value.
- Added `quantize_one_batch` function to `Quantizer` class for test purpose to check the validity of quantization, export, inferences quickly.
- Updated test image under `test` directory since the image was old which is applying wrong normalization.
- Updated `benchmark.*` to use static quantization inference which is the fastest inference. However, I haven't figured out how to integrate arm compute libraries with oneDNN), so arm benchmarking is disabled until it's updated.
- Combined `runq.c` and `runq_static.c` into a single file  `runq.c`, enabling both dynamic quantization (DQ) and static quantization (SQ) model inference within the same codebase.
- Implemented missing unit tests for functions in `func_sq.c`
- Renamed `func_q.c` to `func_dq.c`.
- Modified `func_q.h` to serve as header file for both `func_dq.c` and `func_sq.c`.
-  Moved functions `head`, `tail`, `basic_block` and `bottleneck` from `run*.c` files into `func*.c` files to handle the different parameters required by DQ and SQ inference. I will unify these functions in future commits.
- Moved `im2col` and pool functions from `func_common.c` to each function files. Main structure of functions remains still in `func_common.c`.
- Refactor `properties.h` by splitting structs to separate header files: `config_vanilla.h` for the vanilla model, `config_dq.h` for dynamic quantization, `config_sq.h` for static quantization and `config_common.h` for shared structs.
- Unified model file format in `export.ipynb` and inference files

--- a/test_all.ipynb
+++ b/test_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "92120998",
    "metadata": {},
    "outputs": [],
@@ -19,27 +19,28 @@
     "import numpy as np\n",
     "import torch\n",
     "import struct\n",
+    "# import fastai classes/functions individually to avoid conflicts with pytest\n",
+    "from fastai.vision.all import ImageDataLoaders, untar_data, URLs, Resize, Normalize, imagenet_stats\n",
     "\n",
-    "from export import export_model, export_modelq8\n",
+    "from export import export_model, export_model_dq8, export_model_sq8, Quantizer\n",
     "from train import load\n",
     "\n",
-    "file_path = \"test/data/imagenette2/val_transformed/0/113\""
+    "file_path = \"test/imagenette2-320/data/5/4.bin\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "96cc7f58",
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
-    "# calculate reference values using Python model\n",
     "def calculate_reference_values(model, file_path):\n",
     "    # calculate reference values using Python model\n",
     "    with open(file_path, \"rb\") as f:\n",
     "        sizeof_float, nch, h, w = 4, 3, 224, 224\n",
-    "        image = torch.tensor(struct.unpack(\"f\"*(nch*h*w), f.read(sizeof_float*nch*h*w))).view(1, nch,h,w)\n",
+    "        image = torch.tensor(struct.unpack(\"f\"*(nch*h*w), f.read(sizeof_float*nch*h*w))).view(1,nch,h,w)\n",
     "        ref = model(image).detach()\n",
     "        ref = torch.nn.functional.softmax(ref, dim=1).view(-1).numpy() # python model output\n",
     "    return ref"
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "9d14bf83",
    "metadata": {},
    "outputs": [],
@@ -66,39 +67,74 @@
     "\n",
     "    return res\n",
     "\n",
-    "@pytest.mark.parametrize(\"model_size\", [18, 34, 50])\n",
-    "def test_runfiles(model_size, quantized=True, file_path=file_path):\n",
-    "    \"\"\" test run.c and runq.c works with an acceptable tolerance \"\"\"\n",
-    "    # run vanilla model in test mode\n",
+    "@pytest.mark.parametrize(\"model_size, blas\",\n",
+    "                         [(18, \"OFF\"), (34, \"OFF\"), (50, \"OFF\"),\n",
+    "                         (18, \"ON\"), (34, \"ON\"), (50, \"ON\")])\n",
+    "def test_vanilla(model_size, blas, file_path=file_path):\n",
+    "    \"\"\" test run.c works with an acceptable tolerance \"\"\"\n",
     "    model = load(f\"resnet{model_size}\").model\n",
     "    ref = calculate_reference_values(model, file_path)\n",
-    "    export_model(model)\n",
-    "    command = [\"./run\", \"test\", \"model.bin\", file_path]\n",
-    "    res = execute(command)\n",
     "\n",
+    "    # TEST vanilla inference\n",
+    "    subprocess.run([\"make\", \"compile\", \"QUANT_TYPE=DQ\", f\"BLAS={blas}\"])\n",
+    "    export_model(model, file_path=\"test.bin\")\n",
+    "    command = [\"./run\", \"test\", \"test.bin\", file_path]\n",
+    "    res = execute(command)\n",
     "    assert np.allclose(res, ref, atol=1e-5, rtol=0), \"run.c: Probabilities are not close.\"\n",
     "\n",
-    "    if quantized:\n",
-    "        # test quantized model with group size = 1\n",
-    "        export_modelq8(model, file_path=\"modelq8_1.bin\", gs=1, asymmetric=False)\n",
-    "        resq1 = execute([\"./runq\", \"test\", \"modelq8_1.bin\", file_path])\n",
-    "        assert np.allclose(resq1, ref, atol=1e-5, rtol=0), \"runq.c (symmteric, group size = 1): Probabilities are not close.\"\n",
-    "        # group size = 1\n",
-    "        export_modelq8(model, file_path=\"modelq8_2.bin\", gs=2, asymmetric=False)\n",
-    "        resq2 = execute([\"./runq\", \"test\", \"modelq8_2.bin\", file_path])\n",
-    "        assert np.allclose(resq2, ref, atol=2e-2, rtol=0), \"runq.c (symmetric, group size = 2):Probabilities are not close.\"\n",
-    "        # asymmetric (i.e. using zero point) with group size = 1\n",
-    "        export_modelq8(model, file_path=\"modelq8_2.bin\", gs=10, asymmetric=True)\n",
-    "        resq10 = execute([\"./runq\", \"test\", \"modelq8_2.bin\", file_path])\n",
-    "        assert np.allclose(resq10, ref, atol=1e-1, rtol=0), \"runq.c (asymmetric, group size = 2):Probabilities are not close.\"\n",
+    "@pytest.mark.parametrize(\"model_size, blas\",\n",
+    "                         [(18, \"OFF\"), (34, \"OFF\"), (50, \"OFF\"),\n",
+    "                         (18, \"ON\"), (34, \"ON\"), (50, \"ON\")])\n",
+    "def test_dq(model_size, blas, file_path=file_path):\n",
+    "    \"\"\" test runq.c (QUANT_TYPE=DQ) works with an acceptable tolerance \"\"\"\n",
+    "    model = load(f\"resnet{model_size}\").model\n",
+    "    ref = calculate_reference_values(model, file_path)\n",
+    "    # symmetric (no zero point) with group size = 1\n",
+    "    export_model_dq8(model, file_path=\"test.bin\", gs=1, asymmetric=False)\n",
+    "    res = execute([\"./runq\", \"test\", \"test.bin\", file_path])\n",
+    "    assert np.allclose(res, ref, atol=1e-5, rtol=0), \"runq.c (DQ, symmetric, gs=1): Probabilities are not close.\"\n",
+    "    # symmetric with group size = 2\n",
+    "    export_model_dq8(model, file_path=\"test.bin\", gs=2, asymmetric=False)\n",
+    "    res = execute([\"./runq\", \"test\", \"test.bin\", file_path])\n",
+    "    assert np.allclose(res, ref, atol=2e-2, rtol=0), \"runq.c (DQ, symmetric, gs=2): Probabilities are not close.\"\n",
+    "    # asymmetric (i.e. using zero point) with group size = 1\n",
+    "    export_model_dq8(model, file_path=\"test.bin\", gs=10, asymmetric=True)\n",
+    "    res = execute([\"./runq\", \"test\", \"test.bin\", file_path])\n",
+    "    assert np.allclose(res, ref, atol=1e-1, rtol=0), \"runq.c (DQ, asymmetric, gs=10): Probabilities are not close.\"\n",
     "\n",
-    "    print(\"Done\")"
+    "# Quantize and export models beforehand to avoid repetition of static quantization which is a heavy process\n",
+    "path = untar_data(URLs.IMAGENETTE_320)\n",
+    "dls = ImageDataLoaders.from_folder(path, valid='val', item_tfms=Resize(224),\n",
+    "                                   batch_tfms=Normalize.from_stats(*imagenet_stats, cuda=False),\n",
+    "                                   device=torch.device(\"cpu\"))\n",
+    "\n",
+    "def quantize_and_export(model_size):\n",
+    "    learn = load(f\"resnet{model_size}\")\n",
+    "    model_prepared, qmodel = Quantizer().quantize_one_batch(learn.model, dls.one_batch()[0])\n",
+    "    export_model_sq8(qmodel, model_prepared, file_path=f\"test{model_size}.bin\")\n",
+    "    ref = calculate_reference_values(qmodel, file_path)\n",
+    "    return ref\n",
+    "\n",
+    "refs = []\n",
+    "for size in [18, 34, 50]:\n",
+    "    refs.append(quantize_and_export(size))\n",
+    "\n",
+    "@pytest.mark.parametrize(\"model_size, blas, ref\",\n",
+    "                         [(18, \"OFF\", refs[0]), (34, \"OFF\", refs[1]), (50, \"OFF\", refs[2]),\n",
+    "                         (18, \"ON\", refs[0]), (34, \"ON\", refs[1]), (50, \"ON\", refs[2])])\n",
+    "def test_sq(model_size, blas, ref, file_path=file_path):\n",
+    "    \"\"\" test runq.c (QUANT_TYPE=SQ) works with an acceptable tolerance \"\"\"\n",
+    "    subprocess.run([\"make\", \"compile\", f\"BLAS={blas}\"])\n",
+    "    res = execute([\"./runq\", \"test\", f\"test{model_size}.bin\", file_path])\n",
+    "    # FIX: Tolerance is now large because quantized model inference on x86 is different.\n",
+    "    # Our current tinyRuntime follows quantized model inference on ARM (qnnpack)\n",
+    "    assert np.allclose(res, ref, atol=1e-1, rtol=0), \"runq.c (SQ): Probabilities are not close.\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f2d7370",
+   "id": "1009348f",
    "metadata": {},
    "outputs": [],
    "source": []
