--- a/export.ipynb
+++ b/export.ipynb
@@ -367,8 +367,9 @@
     "    bn_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.BatchNorm1d)]\n",
     "    nbn = len(bn_layers)\n",
     "    nactivation = 0 # dynamic quantization does not calculate scales and zero points for activations beforehand\n",
-    "    nparameters = sum(p.numel() for layer in [*conv_layers, *linear_layers] for p in layer.parameters())\n",
-    "    header = struct.pack(\"7i\", nclasses, nconv, nlinear, nbn, nactivation, nparameters, int(asymmetric))\n",
+    "    # calculate number of parameters to be quantized\n",
+    "    nqparams = sum(p.numel() for layer in [*conv_layers, *linear_layers] for p in layer.parameters())\n",
+    "    header = struct.pack(\"7i\", nclasses, nconv, nlinear, nbn, nactivation, nqparams, int(asymmetric))\n",
     "    f.write(header)\n",
     "    # write layers' config\n",
     "    qoffset = 0 # offset for quantized parameters\n",
@@ -624,8 +625,7 @@
    "outputs": [],
    "source": [
     "#|export\n",
-    "# FIX: write unit test for export_model_sq8, currently quantization takes time, thus not implemented\n",
-    "def export_model_sq8(model, model_prepared, file_path=\"modelq8.bin\"):\n",
+    "def export_model_sq8(qmodel, model_prepared, file_path=\"modelq8.bin\"):\n",
     "    '''\n",
     "    Export the quantized model to a file\n",
     "    The data inside the file follows this order:\n",
@@ -641,15 +641,15 @@
     "    # write model configs\n",
     "    nclasses = 10\n",
     "    # gather convolutional layers\n",
-    "    conv_layers = [layer for layer in model.modules() if layer._get_name() in\n",
+    "    conv_layers = [layer for layer in qmodel.modules() if layer._get_name() in\n",
     "                   {'QuantizedConvReLU2d', 'QuantizedConv2d'}]\n",
     "    nconv = len(conv_layers)\n",
     "    # gather linear layers\n",
-    "    linear_layers = [layer for layer in model.modules() if layer._get_name() in\n",
+    "    linear_layers = [layer for layer in qmodel.modules() if layer._get_name() in\n",
     "                    {'QuantizedLinear', 'QuantizedLinearReLU'}]\n",
     "    nlinear = len(linear_layers)\n",
     "    # gather batchnorm layers\n",
-    "    bn_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.BatchNorm1d)]\n",
+    "    bn_layers = [layer for layer in qmodel.modules() if isinstance(layer, torch.nn.BatchNorm1d)]\n",
     "    nbn = len(bn_layers)\n",
     "    # calculate number of activations\n",
     "    nactivation = 0\n",
@@ -658,13 +658,14 @@
     "            nactivation += 1\n",
     "        else:\n",
     "            break\n",
-    "    # calculate number of params (number of biases is multiplied by 4 because biases are int32)\n",
-    "    nparams = 0\n",
+    "    # calculate size that quantized parameters use in bytes\n",
+    "    # bias size is multiplied by 4 because biases are quantized to int32\n",
+    "    nqparams = 0\n",
     "    for l in [*conv_layers, *linear_layers]:\n",
     "        # l.bias() can be None even though l.bias is not None (See https://github.com/ninjalabo/tinyRuntime/actions/runs/10501848014/job/29092502386)\n",
-    "        nparams += l.weight().numel() + (0 if l.bias is None or l.bias() is None else 4 * l.bias().numel())\n",
+    "        nqparams += l.weight().numel() + (0 if l.bias is None or l.bias() is None else 4 * l.bias().numel())\n",
     "    asymmetric = 1 # static quantization always use zero point in pytorch\n",
-    "    header = struct.pack(\"7i\", nclasses, nconv, nlinear, nbn, nactivation, nparams, asymmetric)\n",
+    "    header = struct.pack(\"7i\", nclasses, nconv, nlinear, nbn, nactivation, nqparams, asymmetric)\n",
     "    f.write(header)\n",
     "    # write layers' config\n",
     "    qoffset = 0 # offset for quantized parameters\n",
@@ -754,7 +755,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c72729c96f04104a3546e87d9287743",
+       "model_id": "d82bae1f7b02432a87f4a96ce009f0d0",
        "version_major": 2,
        "version_minor": 0
       },
